start-sanitize-am33
Mon Jun 29 14:54:32 1998  Jeffrey A Law  (law@cygnus.com)

	* m10300-opc.c: Reorder more instructions so that we do not
	accidentally match a mn10300 instruction when we really
	wanted an am33 instruction.

end-sanitize-am33
Fri Jun 26 11:08:55 1998  Jeffrey A Law  (law@cygnus.com)

	* m10300-dis.c: Only recognize instructions from the currently
	selected machine.
	* m10300-opc.c: Add field indicating the particular variant of
	the mn10300 each instruction is available on.

Fri Jun 26 12:04:21 1998  Ian Lance Taylor  <ian@cygnus.com>

	* configure.in: For bfd_vax_arch, build vax-dis.lo.
	* Makefile.am: Rebuild dependencies.
 	(CFILES): Add vax-dis.c.
	(ALL_MACHINES): Add vax-dis.lo.
	* aclocal.m4: Rebuild with current libtool.
	* configure, Makefile.in: Rebuild.

Fri Jun 26 12:03:20 1998  Klaus Kaempf  <kkaempf@progis.de>

	* vax-dis.c: New file, from work by Pauline Middelink
	<middelin@polyware.iaf.nl>.
	* disassemble.c (ARCH_vax): Define if ARCH_all.
	(disassembler): Add case for ARCH_vax.
	* makefile.vms: Support compilation on vms/vax.

start-sanitize-am33
Wed Jun 24 09:53:06 1998  Jeffrey A Law  (law@cygnus.com)

	* m10300-dis.c (print_insn_mn10300): 0xf7 opcode prefix specifies
	4 byte instructions.
	(disassemble): Correctly handle FMT_D10 instructions.

	* m10300-opc.c (mn10300_opcodes): Fix typo in IMM24 versions of the
	am33 shift instructions.

	* m10300-dis.c (print_insn_mn10300): 0xf9 opcode prefix specifies
	3 byte instructions.
	(disassemble): Handle new instruction formats FMT_D6, FMT_D7, FMT_D8
	FMT_D9 and FMT_D10.  Handle various new opcode flags for the am33.

	* m10300-opc.c (IMM32_HIGH8_MEM): New operand type.
	(mn10300_opcodes): Reorder so as to try and select opcodes from
	the core chip when multiple alternatives exist.  Change several
	am33 instructions to use IMM32_HIGH8_MEM.  Fix typos in "mac" and
	"macbu" instructions.  Fix typos in a couple DSP instructions too.

end-sanitize-am33